# UI

./: .gitignore  Pipfile  README.md  api_test.sh  fake_data.py  main.py  person_data.py  pyproject.toml  routes.py  temp_req.py  test_person_data.py
Person/: __init__.py  person_data.py  person_enIN.py  person_proto.py  test_person_data.py
fakeit/: __init__.py  end_points.py  routes.py  test_person_data.py  test_util_birthgenerate.py
fakeit/Address/: address_proto.py  adress_in.py
fakeit/Person/: person_arabic.py  person_enIN.py  person_enUS.py  person_proto.py  temp_person.py
fakeit/Person/person_util/: birthdate_generator.py  email_generator.py
fakeit/routers/: address_router.py  person_router.py
fakeit/utils_pro/: birthdate_generator.py
tests/: test_fakeit.py  test_person_data.py  test_util_birthgenerate.py
utils/: birthdate_generator.py
utils_pro/: birthdate_generator.py
