[tool.poetry]
name = "fakeit"
version = "0.1.0"
description = ""
authors = ["KP <10536220+kp9821@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^13.15.1"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
